--- a/Lab1/sample.html
+++ b/Lab1/sample.html
@@ -17,6 +17,38 @@
     </ul>
     <input type="button" value="Add">
   </div>
-
+  <div id="TaskTable">
+      <table>
+        <thead>
+          <tr>
+            <th>Task</th>
+            <th>Due Date</th>
+            <th>Completed</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="completed">First task blah blah blah</td>
+            <td>1/15/19</td>
+            <td>yes</td>
+          </tr>
+          <tr>
+            <td class="urgent">Second task blah blah blah</td>
+            <td>1/16/19</td>
+            <td>no</td>
+          </tr>
+          <tr>
+            <td class="urgent">Third task blah blah blah</td>
+            <td>1/17/19</td>
+            <td>no</td>
+          </tr>
+          <tr>
+            <td>Fourth task blah blah blah</td>
+            <td>1/18/19</td>
+            <td>no</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
