--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
    <title>Our awesome game!</title>
+   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <div id="msg"></div>
 <svg xmlns="http://www.w3.org/2000/svg">
@@ -11,6 +12,6 @@
    src="https://code.jquery.com/jquery-3.3.1.min.js"
    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
    crossorigin="anonymous"></script>
-<script type="module" src="controller.js"></script>
+   <script type="module" src="controller.js"></script>
 </body>
 </html>
