Add basic Score card. Ref #2

--- a/Lab4/tests.html
+++ b/Lab4/tests.html
@@ -11,7 +11,7 @@
 <!-- Add your own script files here -->
    <script type="module" src="test/example.spec.js"></script>
    <script type="module" src="test/observable.spec.js"></script>
-   <script type="module"  src="test_score.spec.js"></script>
+   <script type="module" src="test/test_score.spec.js"></script>
    <script type="module">
       mocha.checkLeaks();
       mocha.run();
